fix: Fix avatars' look in dark mode

--- a/src/assets/stylesheets/components/avatars.css
+++ b/src/assets/stylesheets/components/avatars.css
@@ -3,7 +3,7 @@
 
     vertical-align: middle;
 
-    background-color: var(--color-background);
+    background-color: var(--color-pampas);
     border-radius: var(--border-radius);
     outline: 1px solid var(--color-box-shadow);
     outline-offset: -1px;
